2003-03-05  Tom Poindexter  <tpoindex@nyx.net>,
            Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Interp.java (eventuallyDispose):
	* src/jacl/tcl/lang/StdChannel.java (close): Invoke
	the close() method for any remaining channel
	when the interp is being disposed of. The close
	method in the StdChannel class will invoke flush
	one final time for stdout in case there was output
	that had not yet been flushed.

2003-03-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/StdChannel.java (open, write):
	Avoid wrapping a buffered IO object around the
	stdio and stderr streams since this was causing
	problems where stdout was not being flushed.
	Instead, explicitly handle flushing in the
	write method.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Build a jar file named hello.jar
	for use in test that loads class file out of
	a jar. Also copy new directory to dist file.
	* src/tcljava/tcl/lang/TclClassLoader.java
	(getClassFromPath): Use '/' character instead of
	File.separatorChar as the separator when constructing
	a class file name to be searched for in the .jar
	file. A jar file always uses '/' as the separator.
	* src/tests/tcljava/hello/SayHello.java: Add test
	source code.
	* tests/tcljava/JavaCallCmd.test: Add test
	case that loads a class file out of a jar
	on the TCL_CLASSPATH.
	[Bug 225612]

2003-02-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/IfCmd.java (cmdProc):
	Add additional info to errorInfo to match
	Tcl 8.3 implementation.
	* tests/tcl/expr.test:
	* tests/tcl/if.test: Update test cases to
	match Jacl implementation.

2003-02-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/tcl/incr-old.test:
	* tests/tcl/incr.test: Update incr test cases
	to match Jacl implementation. Add tests cases
	from Tcl 8.4 impl.

2003-02-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/interp.test: Don't include load command
	in list of hidden commands for Jacl.